# pkg/database/proto/models/common.pb.go
@@ -1,112 +1,0 @@
-// Code generated by protoc-gen-go. DO NOT EDIT.
-// source: proto/models/common.proto
-
-package database
-
-import (
-	fmt "fmt"
-	proto "github.com/golang/protobuf/proto"
-	_ "github.com/golang/protobuf/ptypes/timestamp"
-	_ "github.com/infobloxopen/protoc-gen-gorm/options"
-	math "math"
-)
-
-// Reference imports to suppress errors if they are not otherwise used.
-var _ = proto.Marshal
-var _ = fmt.Errorf
-var _ = math.Inf
-
-// This is a compile-time assertion to ensure that this generated file
-// is compatible with the proto package it is being compiled against.
-// A compilation error at this line likely means your copy of the
-// proto package needs to be updated.
-const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
-
-type Gender struct {
-	Male                 bool     `protobuf:"varint,1,opt,name=male,proto3" json:"male,omitempty"`
-	Female               bool     `protobuf:"varint,2,opt,name=female,proto3" json:"female,omitempty"`
-	Transgender          bool     `protobuf:"varint,3,opt,name=transgender,proto3" json:"transgender,omitempty"`
-	GenderNonBinary      bool     `protobuf:"varint,4,opt,name=genderNonBinary,proto3" json:"genderNonBinary,omitempty"`
-	XXX_NoUnkeyedLiteral struct{} `json:"-"`
-	XXX_unrecognized     []byte   `json:"-"`
-	XXX_sizecache        int32    `json:"-"`
-}
-
-func (m *Gender) Reset()         { *m = Gender{} }
-func (m *Gender) String() string { return proto.CompactTextString(m) }
-func (*Gender) ProtoMessage()    {}
-func (*Gender) Descriptor() ([]byte, []int) {
-	return fileDescriptor_a2ebef707569ee62, []int{0}
-}
-
-func (m *Gender) XXX_Unmarshal(b []byte) error {
-	return xxx_messageInfo_Gender.Unmarshal(m, b)
-}
-func (m *Gender) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
-	return xxx_messageInfo_Gender.Marshal(b, m, deterministic)
-}
-func (m *Gender) XXX_Merge(src proto.Message) {
-	xxx_messageInfo_Gender.Merge(m, src)
-}
-func (m *Gender) XXX_Size() int {
-	return xxx_messageInfo_Gender.Size(m)
-}
-func (m *Gender) XXX_DiscardUnknown() {
-	xxx_messageInfo_Gender.DiscardUnknown(m)
-}
-
-var xxx_messageInfo_Gender proto.InternalMessageInfo
-
-func (m *Gender) GetMale() bool {
-	if m != nil {
-		return m.Male
-	}
-	return false
-}
-
-func (m *Gender) GetFemale() bool {
-	if m != nil {
-		return m.Female
-	}
-	return false
-}
-
-func (m *Gender) GetTransgender() bool {
-	if m != nil {
-		return m.Transgender
-	}
-	return false
-}
-
-func (m *Gender) GetGenderNonBinary() bool {
-	if m != nil {
-		return m.GenderNonBinary
-	}
-	return false
-}
-
-func init() {
-	proto.RegisterType((*Gender)(nil), "Gender")
-}
-
-func init() {
-	proto.RegisterFile("proto/models/common.proto", fileDescriptor_a2ebef707569ee62)
-}
-
-var fileDescriptor_a2ebef707569ee62 = []byte{
-	// 214 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x5c, 0x8e, 0x31, 0x4b, 0x03, 0x41,
-	0x10, 0x85, 0x39, 0x0d, 0x47, 0x58, 0x0b, 0x61, 0x0b, 0x39, 0xad, 0x82, 0x55, 0x9a, 0x64, 0x0a,
-	0x0b, 0xc1, 0x32, 0x8d, 0x9d, 0x85, 0xa5, 0xdd, 0xee, 0xdd, 0xdc, 0xba, 0xb0, 0x33, 0xb3, 0xec,
-	0x6e, 0x40, 0x3b, 0x7f, 0xba, 0x38, 0x09, 0x78, 0xa4, 0x7b, 0xef, 0x7b, 0xf3, 0xc1, 0x98, 0xfb,
-	0x5c, 0xa4, 0x09, 0x90, 0x4c, 0x98, 0x2a, 0x8c, 0x42, 0x24, 0xbc, 0x57, 0xf6, 0xf0, 0x12, 0x62,
-	0xfb, 0x3c, 0xfa, 0xfd, 0x28, 0x04, 0x91, 0x67, 0xf1, 0x49, 0xbe, 0x24, 0x23, 0x83, 0xce, 0xe3,
-	0x2e, 0x20, 0xef, 0x82, 0x14, 0x02, 0xc9, 0x2d, 0x0a, 0x57, 0xf8, 0x2b, 0x67, 0xf7, 0x79, 0xe1,
-	0x2a, 0xf1, 0xc7, 0x19, 0x6a, 0x19, 0x21, 0x88, 0x84, 0x84, 0xff, 0xac, 0x45, 0xc2, 0xda, 0x1c,
-	0xe5, 0x93, 0xf8, 0xf8, 0xd3, 0x99, 0xfe, 0x15, 0x79, 0xc2, 0x62, 0xad, 0x59, 0x91, 0x4b, 0x38,
-	0x74, 0x9b, 0x6e, 0xbb, 0x7e, 0xd7, 0x6c, 0xef, 0x4c, 0x3f, 0xa3, 0xd2, 0x2b, 0xa5, 0xe7, 0x66,
-	0x37, 0xe6, 0xa6, 0x15, 0xc7, 0x35, 0xa8, 0x3a, 0x5c, 0xeb, 0xb8, 0x44, 0x76, 0x6b, 0x6e, 0x4f,
-	0xe9, 0x4d, 0xf8, 0x10, 0xd9, 0x95, 0xef, 0x61, 0xa5, 0x57, 0x97, 0xf8, 0x60, 0x3e, 0xd6, 0x93,
-	0x6b, 0xce, 0xbb, 0x8a, 0xbe, 0xd7, 0xaf, 0x9e, 0x7e, 0x03, 0x00, 0x00, 0xff, 0xff, 0xe3, 0x5f,
-	0x81, 0xf8, 0x27, 0x01, 0x00, 0x00,
-}
