# pkg/database/proto/models/common.validator.pb.go
@@ -1,21 +1,0 @@
-// Code generated by protoc-gen-gogo. DO NOT EDIT.
-// source: proto/models/common.proto
-
-package database
-
-import (
-	fmt "fmt"
-	math "math"
-	proto "github.com/golang/protobuf/proto"
-	_ "github.com/infobloxopen/protoc-gen-gorm/options"
-	_ "github.com/golang/protobuf/ptypes/timestamp"
-)
-
-// Reference imports to suppress errors if they are not otherwise used.
-var _ = proto.Marshal
-var _ = fmt.Errorf
-var _ = math.Inf
-
-func (this *Gender) Validate() error {
-	return nil
-}
