# pkg/models/table.validator.pb.go
@@ -1,0 +1,43 @@
+// Code generated by protoc-gen-gogo. DO NOT EDIT.
+// source: models/table.proto
+
+package models
+
+import (
+	fmt "fmt"
+	math "math"
+	proto "github.com/golang/protobuf/proto"
+	_ "github.com/mwitkow/go-proto-validators"
+	_ "github.com/golang/protobuf/ptypes/timestamp"
+	_ "github.com/infobloxopen/protoc-gen-gorm/options"
+	github_com_mwitkow_go_proto_validators "github.com/mwitkow/go-proto-validators"
+)
+
+// Reference imports to suppress errors if they are not otherwise used.
+var _ = proto.Marshal
+var _ = fmt.Errorf
+var _ = math.Inf
+
+func (this *User) Validate() error {
+	if this.CreatedAt != nil {
+		if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(this.CreatedAt); err != nil {
+			return github_com_mwitkow_go_proto_validators.FieldError("CreatedAt", err)
+		}
+	}
+	if this.DeletedAt != nil {
+		if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(this.DeletedAt); err != nil {
+			return github_com_mwitkow_go_proto_validators.FieldError("DeletedAt", err)
+		}
+	}
+	if this.UpdatedAt != nil {
+		if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(this.UpdatedAt); err != nil {
+			return github_com_mwitkow_go_proto_validators.FieldError("UpdatedAt", err)
+		}
+	}
+	if this.Gender != nil {
+		if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(this.Gender); err != nil {
+			return github_com_mwitkow_go_proto_validators.FieldError("Gender", err)
+		}
+	}
+	return nil
+}
